--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "15.7.0",
+    "npm": "7.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
